--- a/css/main.css
+++ b/css/main.css
@@ -3220,49 +3220,6 @@ html, body {
         background-color: #76c38f;
         border-radius: 10px; }
 
-.slidebar .block-text {
-  top: 50%;
-  transform: translateY(50%); }
-  .slidebar .block-text .contain-text .title-courousel {
-    color: #ffffff;
-    margin: 20px 0;
-    font-size: 46px; }
-  .slidebar .block-text .contain-text .para-courousel {
-    color: #979797;
-    font-size: 12px;
-    margin-bottom: 0; }
-  .slidebar .block-text .contain-text .btn-courousel {
-    border-radius: 10px;
-    background-color: #76c38f;
-    border: none;
-    color: #ffffff;
-    padding: 10px 15px;
-    margin-top: 20px; }
-.slidebar .block-media {
-  margin-top: 50px; }
-  .slidebar .block-media .circle {
-    border: #6b6b6b solid 20px;
-    border-radius: 50%;
-    background-color: #333333;
-    width: 380px;
-    height: 380px;
-    float: right;
-    position: relative; }
-    .slidebar .block-media .circle .slider-nav {
-      width: 100%;
-      position: absolute;
-      top: 50%;
-      -webkit-transform: translate(50%,50%);
-      -khtml-transform: translate(50%,50%);
-      -moz-transform: translate(50%,50%);
-      -ms-transform: translate(50%,50%);
-      -o-transform: translate(50%,50%);
-      transform: translate(50%,50%); }
-      .slidebar .block-media .circle .slider-nav .slick-next {
-        right: 115px; }
-      .slidebar .block-media .circle .slider-nav .slick-prev {
-        left: -951px; }
-
 .navbar-custom {
   padding: 10px 0; }
   .navbar-custom img {
@@ -3352,3 +3309,48 @@ html, body {
 
 .img-responsive {
   display: inline-block; }
+
+.slidebar {
+  margin-top: 50px; }
+  .slidebar .block-text {
+    top: 50%;
+    transform: translateY(50%); }
+    .slidebar .block-text .slider-nav .slick-next {
+      right: -592px; }
+    .slidebar .block-text .slider-nav .contain-text {
+      outline: none; }
+      .slidebar .block-text .slider-nav .contain-text .title-courousel {
+        color: #ffffff;
+        margin-top: 0;
+        margin-bottom: 20px;
+        font-size: 46px; }
+      .slidebar .block-text .slider-nav .contain-text .para-courousel {
+        color: #979797;
+        font-size: 12px;
+        margin-bottom: 0; }
+      .slidebar .block-text .slider-nav .contain-text .btn-courousel {
+        border-radius: 10px;
+        background-color: #76c38f;
+        border: none;
+        color: #ffffff;
+        padding: 10px 15px;
+        margin-top: 20px; }
+  .slidebar .block-media .circle {
+    border: #6b6b6b solid 20px;
+    border-radius: 50%;
+    background-color: #333333;
+    width: 430px;
+    height: 430px;
+    float: right;
+    position: relative;
+    overflow: hidden; }
+    .slidebar .block-media .circle .slider-for {
+      width: 100%;
+      margin-bottom: 0; }
+      .slidebar .block-media .circle .slider-for .img {
+        text-align: center; }
+        .slidebar .block-media .circle .slider-for .img img {
+          width: 100%; }
+
+.img {
+  color: #ffffff; }
