--- a/scss/page/_slider.scss
+++ b/scss/page/_slider.scss
@@ -16,6 +16,7 @@
                   font-size: 46px;
               }
               .para-courousel {
+                  //TODO style lai
                   color: #979797;
                   font-size: 12px;
                   margin-bottom: 0;
@@ -57,13 +58,5 @@
 
 }
 
-
-
-
-
-
-.img{
-  color: #ffffff;
-}
-
+//TODO style nav slick sider
 
