--- a/scss/page/_slider.scss
+++ b/scss/page/_slider.scss
@@ -1,14 +1,19 @@
 .slidebar{
-  margin-top: 50px;
+  margin-top: 40px;
   .block-text{
     top: 50%;
     transform: translateY(50%);
       .slider-nav{
+          //padding-left: 40px;
           .slick-next {
-              right: -592px;
+              right: -600px;
+          }
+          .slick-prev {
+              left: -15px;
           }
           .contain-text{
               outline: none;
+              margin-left: 50px;
               .title-courousel {
                   color: #ffffff;
                   margin-top: 0;
@@ -20,6 +25,7 @@
                   color: #979797;
                   font-size: 12px;
                   margin-bottom: 0;
+                  width: 400px;
               }
               .btn-courousel{
                   border-radius: 10px;
@@ -31,9 +37,9 @@
               }
           }
       }
-
   }
   .block-media {
+      padding-right: 40px;
     .circle {
       border: #6b6b6b solid 20px;
       border-radius: 50%;
@@ -55,8 +61,8 @@
       }
     }
   }
-
 }
 
 //TODO style nav slick sider
+
 
