--- a/scss/page/_body.scss
+++ b/scss/page/_body.scss
@@ -22,24 +22,31 @@
                     .title {
                         font-size: 32px;
                         margin-top: 10px;
+                        @include css3-prefix('transition', '0.5s');
                     }
                     .para-text {
                         color: #979797;
+                        font-size: 12px;
+                        padding-left: 30px;
+                        padding-right: 30px;
+                        @include css3-prefix('transition', '0.5s');
+                    }
+                    @include css3-prefix('transition', '0.5s');
+                    &:hover {
+                        background-color: $light-green;
+                        .square-shape {
+                            background-color: #fff;
+                            color: #000000;
+                        }
+                        .title {
+                            color: #fff;
+                        }
+                        .para-text{
+                            color: #fff;
+                        }
                     }
                 }
-                .custom-service {
-                    background-color: $light-green;
-                    .square-shape {
-                        background-color: #fff;
-                        color: #000000;
-                    }
-                    .title {
-                        color: #fff;
-                    }
-                    .para-text{
-                        color: #fff;
-                    }
-                }
+
             }
         }
         .lastest-work{
@@ -63,17 +70,11 @@
                         margin: 0;
                     }
                 }
-
                 .border{
                     border-bottom: solid 3px #3c3c3c;
                     width: 960px;
                 }
-
-
-
             }
-
-
             .clearfix{
                 margin: 0 -15px;
                 padding-top: 3px;
@@ -96,6 +97,7 @@
                             bottom: 8%;
                             right: 50%;
                             @include css3-prefix('transform','translate(50%, 50%)');
+                            @include css3-prefix('transition', '0.5s');
                             p{
                                 color: #fff;
                                 max-width: 100%;
@@ -104,18 +106,17 @@
                                 line-height: 30px;
                             }
                         }
+                        @include css3-prefix('transition', '0.5s');
                         &:hover {
-                            .text-bottom{
+                            border-color: $light-green;
+                            .text-bottom {
                                 opacity: 0;
-                                @include css3-prefix('transition', '0.5s');
-
                             }
                         }
                     }
 
                 }
             }
-
         }
     }
 }
